--- a/index.html
+++ b/index.html
@@ -5,9 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title><KamdemDev | Full stack/></title>
+    <!-- Google Fonts: Space Grotesk & Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
+    <script src="script.js"></script>
+    <title><Kamdem || Dev Fullstack/></title>
 </head>
 <body>
     <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <h1><a class="navbar-brand" href="index.html">💻🖥Kamdem Brice</a></h1>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#aboutme">About me🔥</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#skills">Skills</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#projects">Projects</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#contact" id="contact">Contact 📞</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="container mt-5">
+            <div class="row mt-5 text-center" id="home-section">
+                <div class="col-md-12">
+                    <h1 id="element">I' am a Fullstack web developper.</h1>
+                    <p class="text-secondary p-3 mt-1">
+                        Passionate about building modern web applications with Django, 
+                        JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
+                    </p>
+                    <button>View projects</button> <button>Contact me now ☎</button>
+                </div>
+            </div>
+        </div>
+        <div class="">
+
+        </div>
     </div>
+</body>
+<script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js"></script>
 </html>
