--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Google Fonts: Space Grotesk & Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
     <script src="script.js"></script>
-    <title><Kamdem || Dev Fullstack/></title>
+    <title>Kamdem || Dev Fullstack </title>
 </head>
 <body>
     <div class="container-fluid">
@@ -17,7 +18,7 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h1><a class="navbar-brand" href="index.html">💻🖥Kamdem Brice</a></h1>
+                        <h1><a class="navbar-brand" href="index.html">💻Kamdem Brice</a></h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -28,7 +29,7 @@
                                     <a class="nav-link active" aria-current="page" href="#home">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#aboutme">About me🔥</a>
+                                    <a class="nav-link" href="#aboutme">About me</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#skills">Skills</a>
@@ -37,7 +38,7 @@
                                     <a class="nav-link" href="#projects">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#contact" id="contact">Contact 📞</a>
+                                    <a class="nav-link" href="#contact" id="contact">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -45,20 +46,71 @@
                 </nav>
             </div>
         </div>
-        <div class="container mt-5">
-            <div class="row mt-5 text-center" id="home-section">
-                <div class="col-md-12">
-                    <h1 id="element">I' am a Fullstack web developper.</h1>
-                    <p class="text-secondary p-3 mt-1">
-                        Passionate about building modern web applications with Django, 
-                        JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
-                    </p>
-                    <button>View projects</button> <button>Contact me now ☎</button>
-                </div>
+        <div class="row text-center" id="home-section">
+            <div class="col-md-12">
+                <h1 id="element">Hello, my name is Kamdem Brice I' am a Fullstack web developper.</h1>
+                <p class="text-secondary p-3 mt-1">
+                    Passionate about building modern web applications with Django,
+                    JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
+                </p>
+                <button>View projects</button> <button>Contact me now </button>
             </div>
         </div>
-        <div class="">
-
+        <div class="row" id="aboutme">
+            <div class="col-md-5 text-center" id="aboutme-photo">
+                <img src="images/profile.png" id="img-profile">
+                <h4 class="sub-name">kamdem brice</h4>
+                <p>Yaoundé, Cameroun</p>
+                <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
+                <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
+            </div>
+            <div class="col-md-7" id="aboutme-text">
+                <div class="titre mt-5">
+                    <i class="fa-solid fa-user" id="icone-titre"></i><h2>About me</h2>
+                </div>
+                <p class="description mt-3">
+                   I'm a passionate software developer with a strong 
+                   foundation in Django, JavaScript, and Bootstrap. 
+                   My journey in technology is fueled by a curiosity 
+                   for new advancements and a drive to create impactful solutions. 
+                   I thrive on challenges and enjoy collaborating on projects that 
+                   push the boundaries of innovation. My goal is to leverage my skills
+                    and enthusiasm to contribute to cutting-edge developments and make 
+                    a meaningful impact in the tech industry. 
+                </p>
+                <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i><h2>Skills</h2></div>
+                <div class="languages mt-2">
+                    <img src="images/html.png" alt="">
+                    <img src="images/css.png" alt="">
+                    <img src="images/js.png" alt="">
+                    <img src="images/django.png" alt="">
+                    <img src="images/git.png" alt="">
+                    <img src="images/github.png" alt="">
+                    <img src="images/vscode.png" alt="">
+                </div>
+                <div class="titre mt-5"><i class="fa-solid fa-bucket" id="icone-titre"></i><h2>Experiences</h2></div>
+                <div class="experience1 mt-2">
+                    <i class="fa-solid fa-wifi fa-2x"></i>
+                    <p>Tech Innovators Inc. <br> Software Developer</p>
+                </div>
+                <div class="experience1 mt-2">
+                    <i class="fa-solid fa-house fa-2x"></i>
+                    <p>Digital Solutions. <br> Web Developer</p>
+                </div>
+            </div> 
+        </div>
+        <div class="row text-center mt-5" id="skills">
+            <div class="col-md-12">
+                <h1>Skills & Technologies</h1>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <h5>I'm passionate about new technologies and constantly expanding my skill 
+                    set. Here's a glimpse of my current expertise:</h5>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 </body>
