add projects section

--- a/index.html
+++ b/index.html
@@ -79,13 +79,28 @@
                 </p>
                 <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i><h2>Skills</h2></div>
                 <div class="languages mt-2">
-                    <img src="images/html.png">
+                    <!--<img src="images/html.png">
                     <img src="images/css.png">
                     <img src="images/js.png">
                     <img src="images/django.png">
                     <img src="images/git.png">
                     <img src="images/github.png">
-                    <img src="images/vscode.png">
+                    <img src="images/vscode.png">-->
+                    <p>
+                        <i class="fa-2x fab fa-html5"></i>
+                        <i class="fa-2x fab fa-css3-alt"></i>
+                        <i class="fa-2x fab fa-js"></i>
+                        <i class="fa-2x fab fa-react"></i>
+                        <i class="fa-2x fab fa-node-js"></i>
+                        <i class="fa-2x fab fa-npm"></i>
+                        <i class="fa-2x fab fa-git-alt"></i>
+                        <i class="fa-2x fab fa-github"></i>
+                        <i class="fa-2x fab fa-python"></i>
+                        <i class="fa-2x fab fa-bootstrap"></i>
+                        <i class="fa-2x fab fa-figma"></i>
+                        <i class="fa-2x fab fa-windows"></i>
+                        <i class="fa-2x fab fa-linux"></i>
+                    </p>
                 </div>
                 <div class="titre mt-5"><i class="fa-solid fa-bucket" id="icone-titre"></i><h2>Experiences</h2></div>
                 <div class="experience1 mt-2">
@@ -102,51 +117,69 @@
             <div class="row text-center mt-5" id="skills">
                 <div class="col-md-12">
                     <h1>Skills & Technologies</h1>
+                    <h6>I'm passionate about new technologies and constantly expanding my skill
+                        set. Here's a glimpse of my current expertise:</h6>
+                        <br>
+                    <h3>< All my tools /></h3>
                 </div>
             </div>
-            <div class="row text-center mt-2">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <p>I'm passionate about new technologies and constantly expanding my skill
-                        set. Here's a glimpse of my current expertise:</p>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row text-center mt-5">
+            <div class="row text-center mt-4">
                 <div class="col-md-12">
-                    <h3>Core technologies</h3>
+                    <img src="images/html.png">
+                    <img src="images/css.png">
+                    <img src="images/js.png">
+                    <img src="images/django.png">
+                    <img src="images/git.png">
+                    <img src="images/github.png">
+                    <img src="images/vscode.png">
+                    <img src="images/figma.jfif">
+                    <img src="images/python.png">
+                    <img src="images/react.png">
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/html.png" class="card-img-top" alt="HTML5">
+        </div>
+        <div class="row mt-5" id="projects">
+            <div class="col-md-12 text-center">
+                <h1>Projects Showcase</h1>
+                <h6>Explore a selection of projects demonstrating expertise in Django, 
+                    JavaScript, and Bootstrap, with a focus on innovative solutions and 
+                    user-centric design.</h6>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4 text-right">
+                    <div class="card p-3">
+                        <div class="card-img"><img src="images/figma.jfif"></div>
+                        <div class="card-title"><h5>Dynamic Web Application Blog</h5></div>
+                        <div class="card-text">
+                            <p>A robust web app built with Django, 
+                            JavaScript, and Bootstrap, featuring user authentication and 
+                            dynamic content management.</p>
+                        </div>
+                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/css.png" class="card-img-top" alt="HTML5">
+                <div class="col-md-4 text-right">
+                    <div class="card p-3">
+                        <div class="card-img"><img src="images/figma.jfif"></div>
+                        <div class="card-title"><h5>Web application - YOouk</h5></div>
+                        <div class="card-text">
+                            <p>A robust web app built with Django, 
+                            JavaScript, and Bootstrap, featuring user authentication and 
+                            dynamic content management.</p>
+                        </div>
+                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/js.png" class="card-img-top" alt="HTML5">
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/git.png" class="card-img-top" alt="HTML5">
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/github.png" class="card-img-top" alt="HTML5">
-                        <div class="card-title">Front end tools</div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="card text-center p-4">
-                        <img src="images/vscode.png" class="card-img-top" alt="HTML5">
+                <div class="col-md-4 text-right">
+                    <div class="card p-3">
+                        <div class="card-img"><img src="images/figma.jfif"></div>
+                        <div class="card-title"><h5>Drawing arts presentation</h5></div>
+                        <div class="card-text">
+                            <p>A robust web app built with Django, 
+                            JavaScript, and Bootstrap, featuring user authentication and 
+                            dynamic content management.</p>
+                        </div>
+                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
                     </div>
                 </div>
             </div>
