add projects image

--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
                     user-centric design.</h6>
             </div>
             <div class="row mt-5">
-                <div class="col-md-4 text-right">
+                <div class="col-md-4 text-center mb-2">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/figma.jfif"></div>
-                        <div class="card-title"><h5>Dynamic Web Application Blog</h5></div>
+                        <div class="card-img"><img src="images/projet1.JPG" width="350px"></div>
+                        <div class="card-title mt-4"><h5>Dynamic Web Application Blog</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
+                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 text-right">
+                <div class="col-md-4 text-center mb-2">
                     <div class="card p-3">
                         <div class="card-img"><img src="images/figma.jfif"></div>
                         <div class="card-title"><h5>Web application - YOouk</h5></div>
@@ -167,10 +167,10 @@
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
+                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 text-right">
+                <div class="col-md-4 text-center">
                     <div class="card p-3">
                         <div class="card-img"><img src="images/figma.jfif"></div>
                         <div class="card-title"><h5>Drawing arts presentation</h5></div>
@@ -179,7 +179,7 @@
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <button>Live demo <i class="fas fa-arrow-right"></i></button><button>Code</button>
+                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
             </div>
