--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -17,7 +18,7 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h1><a class="navbar-brand" href="index.html">💻Kamdem Brice</a></h1>
+                        <h1><a class="navbar-brand" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice</strong></a></h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -47,23 +48,28 @@
         </div>
         <div class="row text-center" id="home-section">
             <div class="col-md-12">
-                <h1 id="element">Hello, my name is Kamdem Brice I' am a Fullstack web developper</h1>
+                <h1 id="element">Hello🤙🏽, my name is Kamdem Brice i'm a Fullstack web developper🔥</h1>
                 <p class="text-secondary p-3 mt-1">
                     Passionate about building modern web applications with Django,
                     JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
+                    Passionate about building modern web applications with Django,
+                    JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
                 </p> 
-                <button>View projects <i class="fa-solid fa-briefcase"></i></button> <button>Contact me now <i class="fa-solid fa-phone"></i></button>
+                <div class="btn-homesection">
+                    <a href="#projects">View projects <i class="fa-solid fa-briefcase"></i></a> 
+                    <a href="#contact">Contact me now <i class="fa-solid fa-phone"></i></a>
+                </div>
             </div>
         </div>
         <div class="row" id="aboutme">
-            <div class="col-md-5 text-center" id="aboutme-photo">
+            <div class="col-md-4 text-center" id="aboutme-photo">
                 <img src="images/profile.png" id="img-profile">
                 <h4 class="sub-name">kamdem brice</h4>
                 <p>Yaoundé, Cameroun</p>
                 <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
                 <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
             </div>
-            <div class="col-md-7" id="aboutme-text">
+            <div class="col-md-8" id="aboutme-text">
                 <div class="titre mt-5">
                     <i class="fa-solid fa-user" id="icone-titre"></i><h2 data-aos="fade-up">About me</h2>
                 </div>
@@ -79,13 +85,6 @@
                 </p>
                 <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i><h2>Skills</h2></div>
                 <div class="languages mt-2">
-                    <!--<img src="images/html.png">
-                    <img src="images/css.png">
-                    <img src="images/js.png">
-                    <img src="images/django.png">
-                    <img src="images/git.png">
-                    <img src="images/github.png">
-                    <img src="images/vscode.png">-->
                     <p>
                         <i class="fa-2x fab fa-html5"></i>
                         <i class="fa-2x fab fa-css3-alt"></i>
@@ -125,7 +124,7 @@
             </div>
             <div class="row text-center mt-4">
                 <div class="col-md-12">
-                    <img src="images/html.png">
+                    <img src="images/html2.png">
                     <img src="images/css.png">
                     <img src="images/js.png">
                     <img src="images/django.png">
@@ -148,8 +147,8 @@
             <div class="row mt-5">
                 <div class="col-md-4 text-center mb-2">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/projet1.JPG" width="350px"></div>
-                        <div class="card-title mt-4"><h5>Dynamic Web Application Blog</h5></div>
+                        <div class="card-img"><img src="images/projet1.JPG" width="350px" height="400px"></div>
+                        <div class="card-title mt-4"><h5>Dynamic Web Application - Kama.blog</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
                             JavaScript, and Bootstrap, featuring user authentication and 
@@ -160,8 +159,8 @@
                 </div>
                 <div class="col-md-4 text-center mb-2">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/figma.jfif"></div>
-                        <div class="card-title"><h5>Web application - YOouk</h5></div>
+                        <div class="card-img"><img src="images/projet2.JPG" width="350px" height="400px"></div>
+                        <div class="card-title mt-4"><h5>Web Application Pdf Listener - YOouk</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
                             JavaScript, and Bootstrap, featuring user authentication and 
@@ -173,7 +172,7 @@
                 <div class="col-md-4 text-center">
                     <div class="card p-3">
                         <div class="card-img"><img src="images/figma.jfif"></div>
-                        <div class="card-title"><h5>Drawing arts presentation</h5></div>
+                        <div class="card-title mt-4"><h5>Drawing arts presentation</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
                             JavaScript, and Bootstrap, featuring user authentication and 
