--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <script src="script.js" defer></script>
-    <title>Kamdem || Dev Fullstack </title>
+    <title>Kamdem | My Portfolio 🔥 </title>
 </head>
 <body>
     <div class="container-fluid">
@@ -38,7 +38,7 @@
                                     <a class="nav-link" href="#projects"><i class="fa-solid fa-briefcase"></i> Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#contact" id="contact"><i class="fa-solid fa-phone"></i> Contact</a>
+                                    <a class="nav-link" href="#contact-section" id="contact"><i class="fa-solid fa-phone"></i> Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -47,75 +47,91 @@
             </div>
         </div>
         <div class="row text-center" id="home-section">
-            <div class="col-md-12">
-                <h1 id="element">Hello🤙🏽, my name is Kamdem Brice i'm a Fullstack web developper🔥</h1>
-                <p class="text-secondary p-3 mt-1">
-                    Passionate about building modern web applications with Django,
-                    JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
-                    Passionate about building modern web applications with Django,
-                    JavaScript, and Bootstrap. Turning ideas into robust and scalable digital experiences.
-                </p> 
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <h1 id="element">Hello, my name is Kamdem Brice i'm a Fullstack web developper</h1>
+                <h6 class="text-secondary p-4 mt-1">
+                    👋 Salut et bienvenue sur mon portfolio !
+                    💻 Je suis un développeur passionné par le web et les applications modernes.
+                    🚀 J’aime transformer des idées en projets interactifs et performants.
+                    🎨 Mon objectif : allier design, technologie et expérience utilisateur.
+                    📩 Découvre mes projets et n’hésite pas à me contacter !
+                </h6> 
                 <div class="btn-homesection">
                     <a href="#projects">View projects <i class="fa-solid fa-briefcase"></i></a> 
-                    <a href="#contact">Contact me now <i class="fa-solid fa-phone"></i></a>
+                    <a href="#contact-section">Contact me now <i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
+            <div class="col-md-2"></div>
         </div>
-        <div class="row" id="aboutme">
-            <div class="col-md-4 text-center" id="aboutme-photo">
-                <img src="images/profile.png" id="img-profile">
-                <h4 class="sub-name">kamdem brice</h4>
-                <p>Yaoundé, Cameroun</p>
-                <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
-                <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
-            </div>
-            <div class="col-md-8" id="aboutme-text">
-                <div class="titre mt-5">
-                    <i class="fa-solid fa-user" id="icone-titre"></i><h2 data-aos="fade-up">About me</h2>
+        <div class="container">
+            <div class="row" id="aboutme">
+                <div class="col-md-5 text-center" id="aboutme-photo">
+                    <img src="images/profile.png" id="img-profile">
+                    <h4 class="sub-name">kamdem brice</h4>
+                    <p>Yaoundé, Cameroun</p>
+                    <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
+                    <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
                 </div>
-                <p class="description mt-3">
-                   I'm a passionate software developer with a strong 
-                   foundation in Django, JavaScript, and Bootstrap. 
-                   My journey in technology is fueled by a curiosity 
-                   for new advancements and a drive to create impactful solutions. 
-                   I thrive on challenges and enjoy collaborating on projects that 
-                   push the boundaries of innovation. My goal is to leverage my skills
-                    and enthusiasm to contribute to cutting-edge developments and make 
-                    a meaningful impact in the tech industry. 
-                </p>
-                <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i><h2>Skills</h2></div>
-                <div class="languages mt-2">
-                    <p>
-                        <i class="fa-2x fab fa-html5"></i>
-                        <i class="fa-2x fab fa-css3-alt"></i>
-                        <i class="fa-2x fab fa-js"></i>
-                        <i class="fa-2x fab fa-react"></i>
-                        <i class="fa-2x fab fa-node-js"></i>
-                        <i class="fa-2x fab fa-npm"></i>
-                        <i class="fa-2x fab fa-git-alt"></i>
-                        <i class="fa-2x fab fa-github"></i>
-                        <i class="fa-2x fab fa-python"></i>
-                        <i class="fa-2x fab fa-bootstrap"></i>
-                        <i class="fa-2x fab fa-figma"></i>
-                        <i class="fa-2x fab fa-windows"></i>
-                        <i class="fa-2x fab fa-linux"></i>
+                <div class="col-md-7" id="aboutme-text">
+                    <div class="titre mt-5">
+                        <i class="fa-solid fa-user" id="icone-titre"></i>
+                        <h2 data-aos="fade-up">ABOUT ME</h2>
+                    </div>
+                    <p class="description mt-3">
+                        Je m’appelle Kamdem Brice, passionné par le développement web et les technologies modernes.
+                        Actuellement, je me spécialise dans le backend avec Django, tout en maîtrisant HTML, CSS, Bootstrap et PostgreSQL.
+                        Mon parcours universitaire en histoire m’a appris la rigueur, l’esprit critique et la curiosité intellectuelle.
+                        Aujourd’hui, je combine ces compétences avec ma créativité pour concevoir des applications web modernes et performantes.
+                        J’aime relever des défis techniques, apprendre de nouvelles technologies et améliorer en continu mes projets.
+                        Je consacre beaucoup de temps à expérimenter, créer et perfectionner mes compétences.
+                        Mon objectif est de devenir un développeur complet, capable de concevoir aussi bien l’architecture backend que
+                        l’expérience utilisateur frontend.
+                        Au-delà du code, je suis motivé par le désir de construire des solutions utiles, accessibles et durables.
+                        Je crois que la technologie doit être au service de l’innovation et de l’éducation.
+                        Dans mes projets, je mets toujours l’accent sur la qualité, la clarté du code et l’expérience utilisateur.
+                        Je suis ouvert aux collaborations, aux échanges d’idées et aux opportunités de croissance.
+                        Bienvenue sur mon portfolio : un espace qui reflète ma passion, mon travail et mon ambition.
                     </p>
-                </div>
-                <div class="titre mt-5"><i class="fa-solid fa-bucket" id="icone-titre"></i><h2>Experiences</h2></div>
-                <div class="experience1 mt-2">
-                     <i class="fa-solid fa-wifi fa-2x"></i>
-                    <p>Tech Innovators Inc. <br> Software Developer</p>
-                </div>
-                <div class="experience1 mt-2">
-                    <i class="fa-solid fa-house fa-2x"></i>
-                    <p>Digital Solutions. <br> Web Developer</p>
-                </div>
-            </div> 
+                    <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i>
+                        <h2>SKILLS</h2>
+                    </div>
+                    <div class="languages mt-2">
+                        <p>
+                            <i class="fa-2x fab fa-html5"></i>
+                            <i class="fa-2x fab fa-css3-alt"></i>
+                            <i class="fa-2x fab fa-js"></i>
+                            <i class="fa-2x fab fa-react"></i>
+                            <i class="fa-2x fab fa-node-js"></i>
+                            <i class="fa-2x fab fa-npm"></i>
+                            <i class="fa-2x fab fa-git-alt"></i>
+                            <i class="fa-2x fab fa-github"></i>
+                            <i class="fa-2x fab fa-python"></i>
+                            <i class="fa-2x fab fa-bootstrap"></i>
+                            <i class="fa-2x fab fa-figma"></i>
+                            <i class="fa-2x fab fa-windows"></i>
+                            <i class="fa-2x fab fa-linux"></i>
+                        </p>
+                    </div>
+                    <div class="titre mt-5"><i class="fa-solid fa-bucket" id="icone-titre"></i>
+                        <h2>EXPERIENCES</h2>
+                    </div>
+                    <div class="experience1 mt-2">
+                        <i class="fa-solid fa-wifi fa-2x"></i>
+                        <p>Tech Innovators Inc. <br> Software Developer</p>
+                    </div>
+                    <div class="experience1 mt-2">
+                        <i class="fa-solid fa-house fa-2x"></i>
+                        <p>Digital Solutions. <br> Web Developer</p>
+                    </div>
+                
+                </div> 
+            </div>
         </div>
         <div class="row mt-5" id="skills">
             <div class="row text-center mt-5" id="skills">
                 <div class="col-md-12">
-                    <h1>Skills & Technologies</h1>
+                    <h1>SKILLS & TECHNOLOGIES</h1><br>
                     <h6>I'm passionate about new technologies and constantly expanding my skill
                         set. Here's a glimpse of my current expertise:</h6>
                         <br>
@@ -137,17 +153,17 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-5" id="projects">
+        <div class="row" id="projects">
             <div class="col-md-12 text-center">
-                <h1>Projects Showcase</h1>
+                <h1>PROJECTS SHOWCASE</h1><br>
                 <h6>Explore a selection of projects demonstrating expertise in Django, 
                     JavaScript, and Bootstrap, with a focus on innovative solutions and 
                     user-centric design.</h6>
             </div>
             <div class="row mt-5">
-                <div class="col-md-4 text-center mb-2">
+                <div class="col-md-4 col-sm-6 text-center mb-2">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/projet1.JPG" width="350px" height="400px"></div>
+                        <div class="card-img-top"><img src="images/projet1.JPG" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Dynamic Web Application - Kama.blog</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
@@ -157,9 +173,9 @@
                         <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center mb-2">
+                <div class="col-md-4 col-sm-6 text-center mb-2">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/projet2.JPG" width="350px" height="400px"></div>
+                        <div class="card-img-top"><img src="images/projet2.JPG" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Web Application Pdf Listener - YOouk</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
@@ -169,9 +185,9 @@
                         <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 col-sm-6 text-center">
                     <div class="card p-3">
-                        <div class="card-img"><img src="images/figma.jfif"></div>
+                        <div class="card-img-top"><img src="images/figma.jfif" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Drawing arts presentation</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
@@ -183,9 +199,55 @@
                 </div>
             </div>
         </div>
+        <div class="row" id="contact-section">
+            <div class="col-md-6">
+                <h2>CONTACT ME NOW !</h2>
+                <br>
+                <p>I'm always open to discussing new projects,
+                    creative ideas, or opportunities to be part 
+                    of your visions. Feel free to reach out, and let's 
+                    explore how we can collaborate.</p>
+                <form>
+                    <input type="text" name="username" id="username" placeholder="Your name">
+                    <input type="text" name="email" id="email" placeholder="Your email">
+                    <textarea name="textarea" id="textarea" placeholder="Your Message"></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+            <div class="col-md-6 mt-2">
+                <!-- Google Maps iframe pour Yaoundé, Cameroun -->
+                <iframe src="https://www.google.com/maps?q=Yaound%C3%A9,+Cameroun&hl=fr&z=14&output=embed" width="100%" height="464" allowfullscreen="" ></iframe>
+            </div>
+        </div>
+        <div class="row" id="footer">
+            <div class="col-md-4 text-center" id="num-footer">
+                <h5>Information</h5>
+                <br>
+                <p>Author : Kamdem Brice emmanuel</p>
+                <p>Tel : +237 237-691-362-532</p>
+                <p>Email : Kamdembrice770@gmail.com</p>
+            </div>
+            <div class="col-md-4 text-center" id="links-footer">
+                <h5>Liens rapides</h5>
+                <br>
+                <a href="index.html">Home</a>
+                <a href="#aboutme">About me</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact-section">Contact</a>
+            </div>
+            <div class="col-md-4 text-center" id="social-network">
+                <h5>My social networks</h5>
+                <br>
+                <img src="images/facebook.png" width="30px" height="30px">
+                <img src="images/telegram.png" width="30px" height="30px">
+                <img src="images/whatsapp.png" width="30px" height="30px">
+                <img src="images/tiktok.png" width="30px" height="30px">
+                <img src="images/youtube.png" width="30px" height="30px">
+            </div>
+        </div>
     </div>
 </body>
-
 
 <!-- bootstrap js-->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
