add button back to top

--- a/index.html
+++ b/index.html
@@ -220,31 +220,32 @@
             </div>
         </div>
         <div class="row" id="footer">
-            <div class="col-md-4 text-center" id="num-footer">
-                <h5>Information</h5>
-                <br>
+            <div class="col-md-4 col-sm-4 text-center" id="num-footer">
+                <h5 class="titre-footer">Information</h5>
+                <hr>
                 <p>Author : Kamdem Brice emmanuel</p>
                 <p>Tel : +237 237-691-362-532</p>
                 <p>Email : Kamdembrice770@gmail.com</p>
             </div>
-            <div class="col-md-4 text-center" id="links-footer">
-                <h5>Liens rapides</h5>
-                <br>
-                <a href="index.html">Home</a>
+            <div class="col-md-4 col-sm-4 text-center mb-3" id="links-footer">
+                <h5 class="titre-footer">Liens rapides</h5>
+                <hr>
                 <a href="#aboutme">About me</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact-section">Contact</a>
             </div>
-            <div class="col-md-4 text-center" id="social-network">
-                <h5>My social networks</h5>
-                <br>
-                <img src="images/facebook.png" width="30px" height="30px">
-                <img src="images/telegram.png" width="30px" height="30px">
-                <img src="images/whatsapp.png" width="30px" height="30px">
-                <img src="images/tiktok.png" width="30px" height="30px">
-                <img src="images/youtube.png" width="30px" height="30px">
+            <div class="col-md-4 col-sm-4 text-center mb-4" id="social-network">
+                <h5 class="titre-footer">My social networks</h5>
+                <hr>
+                <a href=""><img src="images/facebook.png" width="40px" height="40px"></a>
+                <a href=""><img src="images/telegram.png" width="40px" height="40px"></a>
+                <a href=""><img src="images/whatsapp.png" width="40px" height="40px"></a>
+                <a href=""><img src="images/tiktok.png" width="40px" height="40px"></a>
+                <a href=""><img src="images/youtube.png" width="40px" height="40px"></a>
             </div>
+            <hr>
+            <h6 class="text-center">&copy; Tous droits réservés.kamdem Brice 2025.</h6>
         </div>
     </div>
 </body>
