--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <script src="script.js" defer></script>
     <title>Kamdem | My Portfolio 🔥 </title>
 </head>
 <body>
@@ -50,7 +49,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h1 id="element">Hello, my name is Kamdem Brice i'm a Fullstack web developper</h1>
-                <h6 class="text-secondary p-4 mt-1">
+                <h6 class="p-5">
                     👋 Salut et bienvenue sur mon portfolio !
                     💻 Je suis un développeur passionné par le web et les applications modernes.
                     🚀 J’aime transformer des idées en projets interactifs et performants.
@@ -67,31 +66,32 @@
         <div class="container">
             <div class="row" id="aboutme">
                 <div class="col-md-5 text-center" id="aboutme-photo">
-                    <img src="images/profile.png" id="img-profile">
+                    <img src="images/profile3.jpg" id="img-profile">
                     <h4 class="sub-name">kamdem brice</h4>
                     <p>Yaoundé, Cameroun</p>
                     <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
                     <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
                 </div>
-                <div class="col-md-7" id="aboutme-text">
+                <div class="col-md-1"></div>
+                <div class="col-md-6" id="aboutme-text">
                     <div class="titre mt-5">
                         <i class="fa-solid fa-user" id="icone-titre"></i>
                         <h2 data-aos="fade-up">ABOUT ME</h2>
                     </div>
-                    <p class="description mt-3">
-                        Je m’appelle Kamdem Brice, passionné par le développement web et les technologies modernes.
+                    <p class="description">
+                        Je m’appelle Kamdem Brice 🔥, passionné par le développement web et les technologies modernes.
                         Actuellement, je me spécialise dans le backend avec Django, tout en maîtrisant HTML, CSS, Bootstrap et PostgreSQL.
-                        Mon parcours universitaire en histoire m’a appris la rigueur, l’esprit critique et la curiosité intellectuelle.
+                        Mon parcours universitaire en histoire m’a appris la rigueur 😎, l’esprit critique et la curiosité intellectuelle.
                         Aujourd’hui, je combine ces compétences avec ma créativité pour concevoir des applications web modernes et performantes.
                         J’aime relever des défis techniques, apprendre de nouvelles technologies et améliorer en continu mes projets.
                         Je consacre beaucoup de temps à expérimenter, créer et perfectionner mes compétences.
                         Mon objectif est de devenir un développeur complet, capable de concevoir aussi bien l’architecture backend que
-                        l’expérience utilisateur frontend.
+                        l’expérience utilisateur frontend.💬
                         Au-delà du code, je suis motivé par le désir de construire des solutions utiles, accessibles et durables.
                         Je crois que la technologie doit être au service de l’innovation et de l’éducation.
                         Dans mes projets, je mets toujours l’accent sur la qualité, la clarté du code et l’expérience utilisateur.
                         Je suis ouvert aux collaborations, aux échanges d’idées et aux opportunités de croissance.
-                        Bienvenue sur mon portfolio : un espace qui reflète ma passion, mon travail et mon ambition.
+                        Bienvenue sur mon portfolio : un espace qui reflète ma passion, mon travail et mon ambition. 👌🏽🤙🏽
                     </p>
                     <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i>
                         <h2>SKILLS</h2>
@@ -199,36 +199,38 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="contact-section">
-            <div class="col-md-6">
-                <h2>CONTACT ME NOW !</h2>
-                <br>
-                <p>I'm always open to discussing new projects,
-                    creative ideas, or opportunities to be part 
-                    of your visions. Feel free to reach out, and let's 
-                    explore how we can collaborate.</p>
-                <form>
-                    <input type="text" name="username" id="username" placeholder="Your name">
-                    <input type="text" name="email" id="email" placeholder="Your email">
-                    <textarea name="textarea" id="textarea" placeholder="Your Message"></textarea>
-                    <button type="submit">Send Message</button>
-                </form>
-            </div>
-            <div class="col-md-6 mt-2">
-                <!-- Google Maps iframe pour Yaoundé, Cameroun -->
-                <iframe src="https://www.google.com/maps?q=Yaound%C3%A9,+Cameroun&hl=fr&z=14&output=embed" width="100%" height="464" allowfullscreen="" ></iframe>
+        <div class="container-fluid text-center" id="contact-section">
+            <div class="row">
+                <div class="col-md-8 col-sm-12">
+                    <h1>CONTACT ME NOW !</h1>
+                    <br>
+                    <p>I'm always open to discussing new projects,
+                        creative ideas, or opportunities to be part
+                        of your visions. Feel free to reach out, and let's
+                        explore how we can collaborate.</p>
+                    <form>
+                        <input type="text" name="username" id="username" placeholder="Your name">
+                        <input type="text" name="email" id="email" placeholder="Your email">
+                        <textarea name="textarea" id="textarea" placeholder="Your Message"></textarea>
+                        <button type="submit">Send Message</button>
+                    </form>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <!-- Google Maps iframe pour Yaoundé, Cameroun -->
+                    <iframe src="https://www.google.com/maps?q=Yaound%C3%A9,+Cameroun&hl=fr&z=14&output=embed" width="100%" height="464" allowfullscreen="" ></iframe>
+                </div>
             </div>
         </div>
         <div class="row" id="footer">
             <div class="col-md-4 col-sm-4 text-center" id="num-footer">
-                <h5 class="titre-footer">Information</h5>
+                <h5>Information</h5>
                 <hr>
                 <p>Author : Kamdem Brice emmanuel</p>
                 <p>Tel : +237 237-691-362-532</p>
                 <p>Email : Kamdembrice770@gmail.com</p>
             </div>
             <div class="col-md-4 col-sm-4 text-center mb-3" id="links-footer">
-                <h5 class="titre-footer">Liens rapides</h5>
+                <h5>Liens rapides</h5>
                 <hr>
                 <a href="#aboutme">About me</a>
                 <a href="#skills">Skills</a>
@@ -236,7 +238,7 @@
                 <a href="#contact-section">Contact</a>
             </div>
             <div class="col-md-4 col-sm-4 text-center mb-4" id="social-network">
-                <h5 class="titre-footer">My social networks</h5>
+                <h5>My social networks</h5>
                 <hr>
                 <a href=""><img src="images/facebook.png" width="40px" height="40px"></a>
                 <a href=""><img src="images/telegram.png" width="40px" height="40px"></a>
@@ -254,4 +256,5 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
 <!--typeit js -->
 <script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js" defer></script>
+<script src="script.js" defer></script>
 </html>
