--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Kamdem | My Portfolio 🔥 </title>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h1><a class="navbar-brand" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice</strong></a></h1>
+                        <h1><a class="navbar-brand" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice.</strong></a></h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,10 @@
                 </nav>
             </div>
         </div>
-        <div class="row text-center" id="home-section">
+        <div class="row text-center" id="home-section" data-aos="fade-up" data-aos-duration="5000">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <h1 id="element">Hello, my name is Kamdem Brice i'm a Fullstack web developper</h1>
+                <h1 id="element">Hello, my name is Kamdem i'm a Fullstack web developper.</h1>
                 <h6 class="p-5">
                     👋 Salut et bienvenue sur mon portfolio !
                     💻 Je suis un développeur passionné par le web et les applications modernes.
@@ -64,13 +64,21 @@
             <div class="col-md-2"></div>
         </div>
         <div class="container">
-            <div class="row" id="aboutme">
+            <div class="row" id="aboutme"  data-aos="fade-right" data-aos-duration="3000">
                 <div class="col-md-5 text-center" id="aboutme-photo">
                     <img src="images/profile3.jpg" id="img-profile">
-                    <h4 class="sub-name">kamdem brice</h4>
-                    <p>Yaoundé, Cameroun</p>
-                    <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p>
-                    <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p>
+                    <h4 class="sub-name">kamdem Brice</h4>
+                    <p>Yaoundé, Cameroun</p><br>
+                    <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p><br>
+                    <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p><br>
+                    <p>
+                        <i class="fa-2x fab fa-instagram"></i>
+                        <i class="fa-2x fab fa-telegram"></i>
+                        <i class="fa-2x fab fa-x-twitter"></i>
+                        <i class="fa-2x fab fa-youtube"></i>
+                        <i class="fa-2x fab fa-facebook-square"></i>
+                    </p>
+                    <br>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-6" id="aboutme-text">
@@ -128,10 +136,10 @@
                 </div> 
             </div>
         </div>
-        <div class="row mt-5" id="skills">
+        <div class="row mt-5" id="skills" data-aos="fade-left" data-aos-duration="3000">
             <div class="row text-center mt-5" id="skills">
                 <div class="col-md-12">
-                    <h1>SKILLS & TECHNOLOGIES</h1><br>
+                    <h1>SKILLS & TECHNOLOGIES 🎯</h1><br>
                     <h6>I'm passionate about new technologies and constantly expanding my skill
                         set. Here's a glimpse of my current expertise:</h6>
                         <br>
@@ -153,9 +161,9 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="projects">
+        <div class="row" id="projects" data-aos="fade-up" data-aos-duration="5000">
             <div class="col-md-12 text-center">
-                <h1>PROJECTS SHOWCASE</h1><br>
+                <h1>PROJECTS SHOWCASE 😎</h1><br>
                 <h6>Explore a selection of projects demonstrating expertise in Django, 
                     JavaScript, and Bootstrap, with a focus on innovative solutions and 
                     user-centric design.</h6>
@@ -199,10 +207,10 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid text-center" id="contact-section">
+        <div class="container-fluid text-center" id="contact-section" data-aos="fade-right" data-aos-duration="3000">
             <div class="row">
-                <div class="col-md-8 col-sm-12">
-                    <h1>CONTACT ME NOW !</h1>
+                <div class="col-md-7 col-sm-12">
+                    <h1>CONTACT ME NOW !🧠</h1>
                     <br>
                     <p>I'm always open to discussing new projects,
                         creative ideas, or opportunities to be part
@@ -215,19 +223,19 @@
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-5 col-sm-12">
                     <!-- Google Maps iframe pour Yaoundé, Cameroun -->
                     <iframe src="https://www.google.com/maps?q=Yaound%C3%A9,+Cameroun&hl=fr&z=14&output=embed" width="100%" height="464" allowfullscreen="" ></iframe>
                 </div>
             </div>
         </div>
-        <div class="row" id="footer">
+        <div class="row" id="footer" data-aos="fade-down" data-aos-duration="3000">
             <div class="col-md-4 col-sm-4 text-center" id="num-footer">
                 <h5>Information</h5>
                 <hr>
-                <p>Author : Kamdem Brice emmanuel</p>
-                <p>Tel : +237 237-691-362-532</p>
-                <p>Email : Kamdembrice770@gmail.com</p>
+                <p>Kamdem Brice emmanuel</p>
+                <p>+237-691-362-532</p>
+                <p>Kamdembrice770@gmail.com</p>
             </div>
             <div class="col-md-4 col-sm-4 text-center mb-3" id="links-footer">
                 <h5>Liens rapides</h5>
@@ -240,16 +248,25 @@
             <div class="col-md-4 col-sm-4 text-center mb-4" id="social-network">
                 <h5>My social networks</h5>
                 <hr>
-                <a href=""><img src="images/facebook.png" width="40px" height="40px"></a>
-                <a href=""><img src="images/telegram.png" width="40px" height="40px"></a>
-                <a href=""><img src="images/whatsapp.png" width="40px" height="40px"></a>
-                <a href=""><img src="images/tiktok.png" width="40px" height="40px"></a>
-                <a href=""><img src="images/youtube.png" width="40px" height="40px"></a>
+                <a href=""><i class="fa-2x fab fa-x-twitter"></i></a>
+                <a href=""><i class="fa-2x fab fa-facebook-square"></i></a>
+                <a href=""><i class="fa-2x fab fa-youtube"></i></a>
+                <a href=""><i class="fa-2x fab fa-whatsapp"></i></a>
+                <a href=""><i class="fa-2x fab fa-telegram"></i></a>
+                <br><br>
+                <a href=""><i class="fa-2x fab fa-tiktok"></i></a>
+                <a href=""><i class="fa-2x fab fa-instagram"></i></a>
+                <a href=""><i class="fa-2x fab fa-github"></i></a>
+                <a href=""><i class="fa-2x fab fa-gitlab"></i></a>
+                <a href=""><i class="fa-2x fab fa-windows"></i></a>
             </div>
             <hr>
             <h6 class="text-center">&copy; Tous droits réservés.kamdem Brice 2025.</h6>
         </div>
     </div>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 <!-- bootstrap js-->
